--- a/css/custom.css
+++ b/css/custom.css
@@ -1,187 +1,8 @@
-body{
-    /*background: url(img/mainPageBackground.png);*/
-}
-
-.centeredCircleBlock{
-    text-align: center;
-}
-.labelUnderCircle{
-    width: 220px;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 15px;
-}
-.bottomElements{
-    margin-top: 20px;
-}
-
-.linkToMainPage{
-    color: white !important;
-    float: left;
-    vertical-align: middle;
-    padding-top: 20px;
-}
-
-.linkToMainPage:hover{
-    color: goldenrod !important;
-}
-
-.centerLineProperty{
-    margin-top: 5px;
-}
-
-.linkToAccount{
-    color: white !important;
-    float: right;
-    margin-top: 12px;
-    padding-left: 5px;
-    padding-right: 5px;
-    vertical-align: middle;
-}
-
-.content
+.navBarStyle
 {
-    margin-top : 60px;
+    background-color: #F1B32E;
 }
-
-.linkToAccount:hover{
-    color: goldenrod !important;
-}
-
-.topLine
+.navBarLinks
 {
-    height: 60px;
-}
 
-.imageInRowNews
-{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 0px;
-    padding-right: 0px;
-    margin: 20px;
-}
-
-.textInRowNews
-{
-    padding: 0px;
-    margin-left: 20px;
-    margin-right: 10px;
-    margin-bottom: 20px;
-    margin-top: 0px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
- * Global add-ons
- */
-
-.sub-header {
-    padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
-}
-
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
-.navbar-fixed-top {
-    border: 0;
-}
-
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-    display: none;
-}
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 20px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-    }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-    margin-right: -21px; /* 20px padding + 1px border */
-    margin-bottom: 20px;
-    margin-left: -20px;
-}
-.nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-    color: #fff;
-    background-color: #428bca;
-}
-
-
-/*
- * Main content
- */
-
-.main {
-    padding: 20px;
-}
-@media (min-width: 768px) {
-    .main {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
-}
-.main .page-header {
-    margin-top: 0;
-}
-
-
-/*
- * Placeholder dashboard ideas
- */
-
-.placeholders {
-    margin-bottom: 30px;
-    text-align: center;
-}
-.placeholders h4 {
-    margin-bottom: 0;
-}
-.placeholder {
-    margin-bottom: 20px;
-}
-.placeholder img {
-    display: inline-block;
-    border-radius: 50%;
 }
